<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textHeaderTV"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <LinearLayout
        android:id="@+id/linearLayoutTimeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTV"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstTimeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/textFirstTimeET" />

        <EditText
            android:id="@+id/secondTimeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/textSecondTimeET" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutOperationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTimeText"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSumBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2sp"
            android:layout_marginLeft="2sp"
            android:layout_weight="1"
            android:text="@string/textSumBTN"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/buttonDifBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2sp"
            android:layout_marginLeft="2sp"
            android:layout_weight="1"
            android:text="@string/textDifBTN"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutOperationBtn"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp"
            android:layout_marginRight="2sp"
            android:text="@string/textResultTV"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>